--- a/BA_project_0911_1643.qmd
+++ b/BA_project_0911_1643.qmd
@@ -821,14 +821,13 @@ boxplot <- ggplot(df_gender, aes(x = as.factor(Director_gender), y = Revenue, fi
     x = "Director Gender",
     y = " Log Revenue ",
     title = "Revenue Distribution by Director Gender (Logarithmic Scale)"
-    y = " Log Revenue ",
-    title = "Revenue Distribution by Director Gender (Logarithmic Scale)"
+   
   ) +
   scale_y_log10() + # Apply logarithmic scale
   scale_y_log10() + # Apply logarithmic scale
   scale_fill_manual(values = c(
     "Female" = "#DB9ADB",
-    "Male" = "#4062DB"
+    "Male" = "#4062DB",
     "Female" = "#DB9ADB",
     "Male" = "#4062DB"
   )) +
@@ -861,7 +860,7 @@ plot <- ggplot(
   geom_boxplot(outlier.shape = NA) +  # Hide outliers if they clutter the plot
   scale_fill_manual(values = c("Female" = "#DB9ADB", "Male" = "#4062DB")) +  # Color for male (0) and female (1)
   labs(
-    title = "Budget Distribution by Director Gender",
+    title = "IMDb ratings by Director Gender",
     x = "Director's Gender",
     y = "Imdb Ratings",
     fill = "Gender"
@@ -1144,7 +1143,7 @@ While there is a statistically significant relationship between passing the Bech
 
 ### 7.2.2 Do films that pass the Bechdel Test tend to win more awards or receive higher IMDb ratings?
 
-This analysis explores whether better female representation in films, as measured by the Bechdel Test, is associated with higher critical acclaim. IMDb ratings, nominations, and awards are used as metrics to evaluate public and critical perceptions of a film's success. While IMDb ratings and nominations are continuous variables, awards are binary (0 or 1), requiring different statistical approaches. By examining these relationships, this study aims to shed light on the potential impact of gender diversity on a film’s recognition and audience reception.
+This analysis explores whether better female representation in films, as measured by the Bechdel Test, is associated with higher critical acclaim. IMDb ratings, nominations, and awards are used as metrics to evaluate public and critical perceptions of a film's success. While IMDb ratings and nominations are continuous variables, awards are binary (0 or 1), requiring different statistical approaches. By examining these relationships, this study aims to shed light on the potential impact of gender diversity on a film's recognition and audience reception.
 
 **Analysis Plan**:
 
@@ -1355,73 +1354,84 @@ We created a model to predict in advance the award winning potential of a movie.
 
 **Analysis Plan**:
 
--   Perform feature engineering to encode categorical variables (e.g., `Genre`, `Director`).
-
--   Train regression models (e.g., linear regression for IMDb ratings and revenue, logistic regression for awards).
+-   Train regression models (e.g., linear regression for IMDb ratings and revenue, Random forest for awards for better accuracy rate).
 
 -   Evaluate model performance.\
 
 ```{r}
-
-
 # Split data into training and testing sets 
 set.seed(123)  # For reproducibility
 train_index <- sample(1:nrow(df_unique), 0.7 * nrow(df_unique))  # 70% for training
 train_data <- df_unique[train_index, ]
 test_data <- df_unique[-train_index, ]
 
-# Check class proportions in training and testing sets
-cat("Class proportions in training set:\n")
-print(prop.table(table(train_data$awards)))
-cat("\nClass proportions in testing set:\n")
-print(prop.table(table(test_data$awards)))
 
 # Linear Regression for Revenue 
 
 # Train linear regression model
+
+
+library(broom)
+# Build the linear regression model
 lm_model <- lm(Revenue ~ Bechdel_binary + Budget + Imdb_Votes + Nominations + Gender, data = train_data)
-summary(lm_model)
+
+# Extract meaningful results
+logit_summary <- tidy(lm_model) %>%
+  mutate(Significant = ifelse(p.value < 0.05, "Yes", "No")) %>%
+  select(
+    Term = term, 
+    Estimate = estimate, 
+    `Std. Error` = std.error, 
+    `t-value` = statistic, 
+    `p-value` = p.value, 
+    Significant
+  )
+
+
+# Print as a nice table
+logit_summary %>%
+  kable("html", caption = "Linear Regression Results for revenue") %>%
+  kable_styling(full_width = FALSE, bootstrap_options = c("striped", "hover"))
 
 # Evaluate linear regression
 predictions <- predict(lm_model, test_data)
 actuals <- test_data$Revenue
-r_squared <- cor(predictions, actuals)^2
-cat(paste("R-squared: ", r_squared, "\n"))
 
-# Logistic Regression for Awards 
 
-# Train logistic regression model
-log_model <- glm(Awards ~ Bechdel_binary + Budget + Imdb_Rating + Gender, 
-                 family = binomial, data = train_data)
-summary(log_model)
 
-# Evaluate logistic regression
-log_predicted_probabilities <- predict(log_model, test_data, type = "response")  # Get predicted probabilities
-log_predicted_classes <- ifelse(log_predicted_probabilities > 0.5, 1, 0)  # Convert probabilities to classes (threshold = 0.5)
+```
 
-# Generate the confusion matrix
-test_data$Awards <- as.factor(test_data$Awards)  # Ensure 'awards' is a factor
-log_predicted_classes <- as.factor(log_predicted_classes)  # Convert to factor for confusion matrix
-confusionMatrix(log_predicted_classes, test_data$Awards)
+Now we are moving to the second part of the question concerning awards, both the tables will be analyse in the key findings.
+
+```{r}
 
 # Random Forest for Awards 
 
 # Convert awards to a factor for classification
 train_data$Awards <- as.factor(train_data$Awards)
 
-# Train random forest model
-rf_model <- randomForest(Awards ~ Bechdel_binary + Budget + Imdb_Rating + Gender, data = train_data)
 
-# Predict on test data
-rf_predictions <- predict(rf_model, test_data)
+# Fit the Random Forest model with importance=TRUE
+rf_model <- randomForest(Awards ~ Bechdel_binary + Budget + Imdb_Rating + Gender, 
+                         data = train_data, 
+                         importance = TRUE)
 
-# Confusion matrix for Random Forest
-confusionMatrix(rf_predictions, as.factor(test_data$Awards))
+# Extract variable importance
+rf_summary <- as.data.frame(importance(rf_model)) %>%
+  rownames_to_column(var = "Term") %>%
+  mutate(Significant = ifelse(MeanDecreaseGini > mean(MeanDecreaseGini), "Yes", "No")) %>%
+  select(
+    Term, 
+    `Mean Decrease Accuracy` = MeanDecreaseAccuracy, 
+    `Mean Decrease Gini` = MeanDecreaseGini, 
+    Significant
+  )
 
-# Check variable importance
-cat("\nVariable Importance:\n")
-print(importance(rf_model))
-varImpPlot(rf_model)
+# Display the summary using kable
+rf_summary %>%
+  kable("html", caption = "Random Forest Variable Importance") %>%
+  kable_styling(full_width = FALSE, bootstrap_options = c("striped", "hover"))
+
 ```
 
 **Key findings**
@@ -1430,7 +1440,34 @@ varImpPlot(rf_model)
 
 -   Both the bechdel test result and the director's gender do not impact significantly the revenue nor the awards winning.
 
--   The model performance of the logistic regression for awards has an **accuracy of** 77% but the **Sensitivity is low (**21%), meaning the model struggles to identify films that don't win awards. This can be explain by the asymmetry between the number of movies that have received awards (79.26%) and the one that didn't (20.21%).
+We added a confusion matrix to evaluate the **accuracy** of the model along with the **specificity** and **sensitivity**
+
+```{r}
+# Predict on test data
+rf_predictions <- predict(rf_model, test_data)
+
+# Confusion matrix for Random Forest
+cm <- confusionMatrix(rf_predictions, as.factor(test_data$Awards))
+
+# Extract metrics
+accuracy <- cm$overall['Accuracy']
+sensitivity <- cm$byClass['Sensitivity']
+specificity <- cm$byClass['Specificity']
+
+# Create a data frame for the table
+metrics <- data.frame(
+  Metric = c("Accuracy", "Sensitivity", "Specificity"),
+  Value = round(c(accuracy, sensitivity, specificity), 2)
+)
+
+# Generate and style the table with kableExtra
+kable(metrics, col.names = c("Metric", "Value"), caption = "Performance Metrics for Random Forest for Awards") %>%
+  kable_styling(full_width = FALSE, bootstrap_options = c("striped", "hover", "condensed")) %>%
+  column_spec(1, bold = TRUE, border_right = TRUE) %>%
+  column_spec(2, color = "darkblue")
+```
+
+-   The model performance of the random forest for awards has an **accuracy of** 76% but the **Sensitivity is low (**32%), meaning the model struggles to identify films that don't win awards. This can be explain by the asymmetry between the number of movies that have received awards (79.26%) and the one that didn't (20.21%).
 
 -   The random forest classification offer us insight in the importance of the different variables: **MDb Rating:** The most important predictor, contributing significantly to model accuracy (%IncMSE = 40.95) and **Budget** The second most important variable (%IncMSE =15.02)
 
@@ -1450,11 +1487,11 @@ The intention of this model is to offer critic public a prediction beforehand wh
 
 -   Treat `Bechdel_test_result` as a binary outcome for passing or failing.
 
--   Use logistic regression and random forest for prediction.
+-   Use random forest for prediction using Bechdel_binary as the dependent variable.
 
 -   Evaluate model performance using accuracy, precision, recall, and AUC.
 
-```{r}
+```{r,echo=FALSE}
 
 # Set seed for reproducibility
 set.seed(123)
@@ -1468,24 +1505,6 @@ test_data <- df_unique[-trainIndex, ]
 train_data$Bechdel_binary <- as.factor(train_data$Bechdel_binary)
 test_data$Bechdel_binary <- as.factor(test_data$Bechdel_binary)
 
-# Logistic Regression 
-
-# Train logistic regression model
-bechdel_model <- glm(
-  Bechdel_binary ~ Budget + Genre + Gender + Awards + Imdb_Rating + Imdb_Votes,
-  data = train_data, family = "binomial"
-)
-summary(bechdel_model)
-
-# Predictions and evaluation
-log_predictions <- predict(bechdel_model, test_data, type = "response")
-log_predicted_classes <- as.factor(ifelse(log_predictions > 0.5, 1, 0))
-
-# Ensure predicted classes have the same levels as the actual data
-levels(log_predicted_classes) <- levels(test_data$Bechdel_binary)
-
-# Confusion matrix for logistic regression
-confusionMatrix(log_predicted_classes, test_data$Bechdel_binary)
 
 # Random Forest 
 
@@ -1502,15 +1521,15 @@ rf_predictions <- predict(rf_model, test_data)
 rf_predictions <- as.factor(rf_predictions)
 levels(rf_predictions) <- levels(test_data$Bechdel_binary)
 
-# Confusion matrix for random forest
-confusionMatrix(rf_predictions, test_data$Bechdel_binary)
 
-# Variable importance
-cat("\nVariable Importance (Random Forest):\n")
-print(importance(rf_model))
+
+
+
+
+```
+
+```{r}
 varImpPlot(rf_model)
-
-
 
 ```
 
@@ -1528,7 +1547,37 @@ varImpPlot(rf_model)
 
 -   Mean decreased accuracy shows that the most important variable for the accuracy of the model are Genre, gender and IMDb_votes, they are key factor for determining whether a film passes the Bechdel Test.
 
--   The accuracy of the models are moderate with random forest slightly outperforming logistic regression (61.95% vs. 59.29% accuracy)
+```{r}
+# Predictions and evaluation
+rf_predictions <- predict(rf_model, test_data)
+
+# Ensure random forest predictions are factors
+rf_predictions <- as.factor(rf_predictions)
+levels(rf_predictions) <- levels(test_data$Bechdel_binary)  # Align levels with test data
+
+# Confusion matrix for Random Forest
+cm <- confusionMatrix(rf_predictions, test_data$Bechdel_binary)
+
+# Extract metrics
+accuracy <- cm$overall['Accuracy']
+sensitivity <- cm$byClass['Sensitivity']
+specificity <- cm$byClass['Specificity']
+
+# Create a data frame for the table
+metrics <- data.frame(
+  Metric = c("Accuracy", "Sensitivity", "Specificity"),
+  Value = round(c(accuracy, sensitivity, specificity), 2)
+)
+
+# Generate and style the table with kableExtra
+kable(metrics, col.names = c("Metric", "Value"), caption = "Performance Metrics for Random Forest (Bechdel Binary)") %>%
+  kable_styling(full_width = FALSE, bootstrap_options = c("striped", "hover", "condensed")) %>%
+  column_spec(1, bold = TRUE, border_right = TRUE) %>%
+  column_spec(2, color = "darkblue")
+
+```
+
+-   The Random Forest model demonstrates an accuracy of **61%**, indicating that it correctly predicts the Bechdel binary outcome in 61% of cases. The sensitivity is **72%**, meaning it effectively identifies positive cases, while the specificity is **47%**, reflecting a lower ability to correctly classify negative cases.
 
 **Conclusion**
 
